@@ -386,9 +386,13 @@ sub cmd_to_code {
    my $self = shift;
    my ($line) = @_;
 
-   while ($line =~ /'\s*(?:use|set|get|run)\s.*?'/) {
+   while ($line =~ /^\s*'\s*(?:use|set|get|run)\s.*?'\s*$/) {
       $self->debug && $self->log->debug("cmd_to_code: before: [$line]");
-      $line =~ s/'\s*((?:use|set|get|run)\s.*?)\s*'/\$SHE->cmd("$1")/;
+      if ($line =~ /^\s*'\s*((?:use|set|get|run)\s.*?)\s*'\s*$/) {
+         (my $new = $1) =~ s/"/\\"/g;
+         $self->debug && $self->log->debug("cmd_to_code: new: [$new]");
+         $line = '$SHE->cmd("'.$new.'")';
+      }
       $self->debug && $self->log->debug("cmd_to_code: after: [$line]");
 
       $self->debug && $self->log->debug("cmd_to_code: [$line]");
